refactoring little things for start

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,23 +9,33 @@ set(CMAKE_C_STANDARD 99)
 find_package(CURL REQUIRED)
 find_package(LibXml2 REQUIRED)
 
-
 set(INCLUDE_FILES
         include/getting_html.h
-        include/global.h)
+        include/global.h
+        include/htmlparsing.h
+        include/save_to_file.h)
 
 set(SOURCE_FILES
         src/ava.c
         src/ava.h
         src/getting_html.c
         src/getting_html.h
-        src/global.c include/save_to_file.h src/save_to_file.c include/htmlparsing.h include/output.h)
+        src/htmlparsing.c
+        src/htmlparsing.h
+        src/save_to_file.c
+        src/global.c
+        )
+
+set(TEST_FILES
+        test/offline_doc.c
+        test/offline_doc.h)
 
 add_executable(Ava
         ${SOURCE_FILES}
-        ${INCLUDE_FILES})
+        ${INCLUDE_FILES}
+        ${TEST_FILES})
 
-target_include_directories(Ava PUBLIC include)
+target_include_directories(Ava PUBLIC include test)
 
 target_include_directories(Ava PRIVATE ${LIBXML2_INCLUDE_DIR})
 target_link_libraries(Ava PRIVATE curl ${LIBXML2_LIBRARIES})
